Add an interpreter for the simply typed lambda calculus.

--- a/ExtendedSystemF.cabal
+++ b/ExtendedSystemF.cabal
@@ -52,6 +52,7 @@ library
   ghc-options: -Wall
   -- Modules exported by the library.
   exposed-modules:     Parser
+                     , Interpreter
 
   -- Modules included in this library but not exported.
   -- other-modules:
