Subtype function fleshed out, need to start instantiateL and instantiateR

--- a/ExtendedSystemF.cabal
+++ b/ExtendedSystemF.cabal
@@ -67,6 +67,7 @@ library
                      , parser-combinators
                      , text
                      , mtl
+                     , containers
 
   -- Directories containing source files.
   hs-source-dirs:      lib
