Add type to zero example to make it synthesizable

--- a/ExtendedSystemF.cabal
+++ b/ExtendedSystemF.cabal
@@ -23,6 +23,7 @@ library
   exposed-modules:     TypeChecker
                      , Types
                      , Subtype
+                     , Examples
   -- Modules included in this library but not exported.
   -- other-modules:
   -- LANGUAGE extensions used by modules in this package.
